[gd_scene load_steps=2 format=3 uid="uid://cq7eup2eplik8"]

[ext_resource type="Script" path="res://scenes/control/build_hint.gd" id="1_g7cq2"]

[node name="BuildHint" type="Area2D"]
z_index = 5
collision_layer = 512
collision_mask = 515
script = ExtResource("1_g7cq2")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
